--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <b><i>User Stories:</i></b>
         <ol>
           <li>
-            I can pass a string<sup>*</sup> as a parameter, and it will check to see whether that string contains either a unix
+            I can pass a string as a parameter, and it will check to see whether that string contains either a unix
             timestamp or a natural language date (example: January 1, 2017)
           </li>
           <li>
@@ -23,7 +23,6 @@
             properties.
           </li>
         </ol>
-        <i>* - in a variant of ISO8601 or RFC2822 formats.</i>
       </blockquote>
       <h2>Example usage:</h2>
       <a href="https://rebel-turnover.glitch.me/December%2015,%202015" target="blank">
