--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Timestamp Microservice</title>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+          crossorigin="anonymous">
   </head>
   <body>
-    <div>
-      <h1>Timestamp Microservice</h1>
+    <div class="container-fluide"
+         style="margin: 5%">
+      <h2>Timestamp Microservice</h2>
       <p>dmiten | <a href="https://github.com/dmiten/FCC-backend-Timestamp" target="blank">GitHub</a></p>
       <blockquote>
         <b><i>User Stories:</i></b>
@@ -22,16 +27,20 @@
           properties.
         </li>
       </blockquote>
-      <h2>Example usage:</h2>
-      <a href="https://rebel-turnover.glitch.me/December%2015,%202015" target="blank">
-        <code>https://rebel-turnover.glitch.me/December%2015,%202015</code>
-      </a><br>
-      <a href="https://rebel-turnover.glitch.me/1450137600" target="blank">
-        <code>https://rebel-turnover.glitch.me/1450137600</code>
-      </a>
-      <h2>Example output:</h2>
-      <code>{ "unix": 1450137600, "natural": "December 15, 2015" }</code><br>
-      <code>{ "unix": null, "natural": null }</code>
+      <blockquote>
+        <b><i>Example usage:</i></b><br>
+        <a href="https://rebel-turnover.glitch.me/December%2015,%202015" target="blank">
+          <code>https://rebel-turnover.glitch.me/December%2015,%202015</code>
+        </a><br>
+        <a href="https://rebel-turnover.glitch.me/1450137600" target="blank">
+          <code>https://rebel-turnover.glitch.me/1450137600</code><br>
+        </a>
+      </blockquote>
+      <blockquote>
+        <b><i>Example output:</i></b><br>
+        <code>{ "unix": 1450137600, "natural": "December 15, 2015" }</code><br>
+        <code>{ "unix": null, "natural": null }</code>
+      </blockquote>
     </div>
   </body>
 </html>
